tests/compile_errors/block-expression-partial-out.buzz
// All block expression paths must end with `out`
test "partial block expression out" {
    final flag = true;

    _ = from {
        if (flag) {
            out 1;
        }
    };
}
